k8s/services/external/app/music-assistant/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: music-assistant
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8095
      targetPort: 8095
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: music-assistant
  labels:
    kubernetes.io/service-name: music-assistant
addressType: FQDN
ports:
  - name: http
    protocol: TCP
    port: 8095
endpoints:
  - addresses:
      - homeassistant.bar.risson.net
    conditions: {}
