k8s/services/external/app/music-assistant/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: music-assistant
spec:
  parentRefs:
    - name: eg-http-bar
      namespace: core-eg
      sectionName: https
  hostnames:
    - music.home.risson.space
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: music-assistant
          port: 8095
